--- a/style.css
+++ b/style.css
@@ -1,58 +1,20 @@
-*{
-    padding: 0px;
-    margin: 0px;
-}
-.fondo{
-    position: relative;
-    background-color: #000;
+.primero2 {
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    background-color: black;
 }
-.fondo1{
-    position: relative;
-    width: 100%;
 
+.img1 {
+max-width: 100%;
+max-height: 100%;
 }
-.encabezado{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+
+.contenedor {
     background-color: #fff;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-}
-img{
-    max-width: 50%;
-    max-height: 50%;
+    position: relative;
+    display: inline-block;
+    text-align: center;
 }
 
-h2{
-    padding: 15px;
-    background-color: white;
-    text-align: center;
-    color: #084562;
-    font-family: 'book antiqua';
-    font-size: 1em;
-}
-.ubi{
-    height: 50px;
-    margin-top: 150px; 
-    margin-left: 9px;
- 
-  }
-  .confirmar{
-    margin-top: -90px; 
-    margin-left: 2px;
-    height: 50px;
-}
-.agregar{
-    margin-top: 305px; 
-    margin-left: 2px;
-    height: 50px; 
-}
 .centrado {
     position: absolute;
     top: 50%;
@@ -65,15 +27,19 @@ h2{
     color: #084562;
     border-color: black;
     border-radius: 2.5px;
-    padding: 1.5px 2px;
+    padding: 2.5px 5px;
     border-radius: 2.5px;
     border: none;
-    font-size: 20px;
+    font-size: 35px;
     cursor: pointer;
     width: 100%;
+    /*El ancho se adapta al tamaño de pantalla*/
+    max-width: 200px;
+    /*Tamaño máximo del botón*/
     font-family: 'Akshar', sans-serif;
     font-family: 'Beau Rivage', cursive;
     text-decoration: none;
+
 }
 
 .borde {
@@ -82,8 +48,8 @@ h2{
 
 .box {
     width: 100%px;
-    max-width: 150px;
-    border-radius: 15px;
+    max-width: 200px;
+    border-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -93,8 +59,8 @@ h2{
 .box::after {
     content: '';
     position: absolute;
-    width: 200px;
-    height: 200px;
+    width: 500px;
+    height: 500px;
     background-image: conic-gradient(transparent,
             transparent, transparent, #E1B0AC);
     animation: animate 4s linear infinite;
@@ -110,47 +76,110 @@ h2{
     transparent, #969082);
     animation: animate 4s linear infinite;
 }
-  .box span {
-    inset: 5px;
-    border-radius: 16px;
-    background-color: #fff;
-    z-index: 1;
-}
-@media (max-width: 800px){
-    img{
-        max-width: 100%;
-        max-height: 100%;
-    }
-    .ubi{
-        margin-top: 70px; 
-        margin-left: 9px;
-        height: 40px;
-      }
-    .confirmar{
-        margin-top: -45px; 
-        margin-left: 2px;
-        height: 30px;
-    }
-    .agregar{
-        margin-top: 135px; 
-        margin-left: 2px;
-        height: 30px; 
-    }
-}
-
-
-
 
 @keyframes animate {
     0% {
         transform: rotate(0deg);
     }
-  
+
     100% {
         transform: rotate(360deg);
     }
+}
+
+.box span {
+    inset: 5px;
+    border-radius: 16px;
+    background-color: #fff;
+    z-index: 1;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
-  
+  .contenedor {
+
+    text-align: center;
+  }
+  .cartel {
+    width: 109px;
+    height: 109px;
+    padding: 10px 0px 5px 0px;
+    text-align: center;
+    display: inline-block;
+    margin: 5px;
+    border: 3px solid #000000;
+    border-radius: 5px;
+  }
+  .cartel>div{
+    font-size: 50px;
+    font-family: 'Chela One', sans serif;
+    animation: fade 3s;
+    line-height: 30px;
+    margin-top: 5px;
+  }
+  .cartel>div>h3 {
+    margin-top: 15px;
+    font-size: 20px;
+    font-weight: normal;
+  }
+  .h3 {
+    bottom: 0;
+    margin: 0 auto ;
+  }
+
+  .contenido {
+    width: 80%;
+    margin: 0 auto;
+    border: 0px solid black;
+    z-index: 10;
+  }
+  li {
+    display: inline-block;
+    font-size: 1.5em;
+    list-style-type: none;
+    padding: 1em;
+    text-transform: uppercase;
+  }
+  li span {
+    display: block;
+    font-size: 4.5rem;
+  }
+  .numeros {
+    font-family: 'Chela one', sans-serif;
+    font-size: 60px;
+    transition: .3s;
+    animation-name: fade;
+    animation-duration: 3s;
+  }
+  .responsivo1 {
+    display: inline-block
+  }
+  .responsivo2 {
+    display: inline-block
+  }
+  @media (max-width: 450px) {  
+    .contenedor {
+      background-color: #fff;
+
+    }
+    .banner {
+     margin-bottom: 30px; 
+    }
+    .cartel {
+      height: 99px;
+      width: 99px;
+    }
+    .cartel>div{
+      font-size: 45px;
+    }
+    .cartel>div>h3 {
+      font-size: 15px;
+      margin-top: 0px;
+    }
+  }
   @keyframes fade {
       0%   {
         opacity: 0;
@@ -162,4 +191,59 @@ h2{
         opacity: 1;
     }
   }
+
   
+  .center-abs{
+    top:40%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    position: absolute;
+  }
+  
+  .charts{
+    display: flex;
+  
+  }
+  .chart{
+    position: relative;
+    width:25%;
+    height: 200px;
+  }
+  .chart svg{
+    z-index: 2;
+  }
+  .chart h3{
+    color:#fff;
+    font-size: 1.8em;
+    position: absolute;
+    bottom:10px;
+    text-align: center;
+    width: 100%;
+    text-shadow: 1px 1px 10px #878377;
+    font-family: 'Roboto';
+  }
+  
+  .circle{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    z-index:1;
+    border:10px #EFE2D9 solid;
+  }
+  .text{
+    z-index: 3;
+    text-align: center;
+    width: 100%;
+    font-family: 'Roboto';
+    font-size: 3em;
+    font-weight: 700;
+    color:#3d382e
+  }
+  
+  .outer{
+    fill: transparent;
+    stroke: #E9BAB6;
+    stroke-width: 10; 
+    stroke-dasharray: 285; 
+    transform: rotate(270deg) translate(-100px, 0); 
+  }
