--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ max-height: 100%;
 }
 
 .contenedor {
-    background-color: #fff;
+    background-color:  #fff !important;
     position: relative;
     display: inline-block;
     text-align: center;
@@ -99,6 +99,13 @@ max-height: 100%;
     margin: 0;
     padding: 0;
   }
+  .repro{
+    margin-top: -440px;
+    margin-left: -46%;
+    height: 40px;
+    width: 150px;
+    z-index: 2;
+  }
   .contenedor {
 
     text-align: center;
@@ -179,6 +186,14 @@ max-height: 100%;
       font-size: 15px;
       margin-top: 0px;
     }
+    .repro{
+      margin-top: -320px;
+      margin-left: -28%;
+      height: 40px;
+      width: 150px;
+      z-index: 2;
+    }
+
   }
   @keyframes fade {
       0%   {
